--- a/html/workshop_three.html
+++ b/html/workshop_three.html
@@ -25,11 +25,82 @@
 
 		<div style="margin-left:25%;padding:1px 16px;height:1000px;">
 			<h3>Assignments</h3>
-			<p>...</p>
-			<h3>Research</h3>
-			<p>...</p>
-			<h3>Reflect</h3>
-			<p>...</p>
+			<p>
+			Opdracht 1 is om alles te installeren en klaar te zetten.<br >
+			<img src="../pictures/arduino/one_blink.PNG"><br >
+			<img src="../pictures/arduino/v/one.jpg"><br >
+			
+			Opdracht 2 we zijn begonnen met één led lichtje te laten knipperen. Eerst hebben we het langzaam laten knipperen, daarna sneller en als laatste op verschillende soorten momenten laten knipperen.<br >
+			<img src="../pictures/arduino/two_ledfast.PNG"><br >
+			<img src="../pictures/arduino/two_ledslow.PNG"><br >
+			<img src="../pictures/arduino/two_ledslowoff.PNG"><br >
+			
+			Opdracht 3 zijn er twee led lichtjes aangesloten zodat we ze allebei kunnen laten knipperen. De code moest aangepast worden. Eerst knipperen ze op het zelfde moment, daarna knipperen ze op verschillende momenten en als laatst moest het ene lichtje sneller knipperen dan de andere.<br >
+			<img src="../pictures/arduino/three_ledasync.PNG"><br >
+			<img src="../pictures/arduino/three_ledgreenfast.PNG"><br >
+			<img src="../pictures/arduino/three_ledsync.PNG"><br >
+			<video controls><source src="../pictures/arduino/v/two.mp4" type="video/mp4"></video><br >
+			<video controls><source src="../pictures/arduino/v/three.mp4" type="video/mp4"></video><br >
+			<video controls><source src="../pictures/arduino/v/four.mp4" type="video/mp4"></video><br >
+			
+			Opdracht 4 bij deze opdracht hebben we de code aangepast en gewerd met de brightness van de lichten. Dus de hoeveelheid licht dat ze uitstralen. Uiteindelijk hebben we de ene laten aangaan en de andere ging toen uit. Ze wisselde elkaar af met aan en uit gaan.<br >
+			<img src="../pictures/arduino/four_ledfadeInout.PNG"><br >
+			<img src="../pictures/arduino/four_ledfading.PNG"><br >
+			<img src="../pictures/arduino/four_ledintensity.PNG"><br >
+			<video controls><source src="../pictures/arduino/v/five.mp4" type="video/mp4"></video><br >
+			<video controls><source src="../pictures/arduino/v/seven.mp4" type="video/mp4"></video><br >
+
+			Opdracht 5 de potmeter is aangesloten aan de lichten. Door aan de potmeter te draaien gaan de lichten aan en uit.<br >
+			<img src="../pictures/arduino/five_potentiometer.PNG"><br >
+			<video controls><source src="../pictures/arduino/v/eight.mp4" type="video/mp4"></video><br >
+			<video controls><source src="../pictures/arduino/v/ten.mp4" type="video/mp4"></video><br >
+			<img src="../pictures/arduino/v/nine.jpg"><br >
+			
+			Opdracht 6 hierbij hebben we de codes aangepast zodat de lichten veler en niet veler worden. Door de waardes in de codes aan te passen gingen de lichten langzaam aan en uit als er aan de potmeter werd gedraaid. Anders gingen de lichten aan en uit en niet langzaam aan en uit.<br >
+			<img src="../pictures/arduino/six_ledsensorvalue remapped.PNG"><br >
+			<img src="../pictures/arduino/six_ledsensorvalue.PNG"><br >
+			<img src="../pictures/arduino/six_ledsensorvalueviceversa.PNG"><br >
+			<video controls><source src="../pictures/arduino/v/eleven.mp4" type="video/mp4"></video><br >
+			
+			Opdracht 7 we hebben een lichtmeter aangesloten aan de lichten. Als het donker werd gaan de lichten uit en anders gaan ze weer aan. <br >
+			<img src="../pictures/arduino/seven_ledlightsensor.PNG"><br >
+			<video controls><source src="../pictures/arduino/v/twaalf.mp4" type="video/mp4"></video><br >
+			
+			Opdracht 8 bij deze opdracht hebben we de arduino aangesloten aan de processing. Dit hebben we met de lichtmeter gedaan. Als je op de lichtmeter drukt dan wordt het rondje in het scherm kleiner en anders wordt hij groter. <br >
+			<img src="../pictures/arduino/acht.JPG"><br >
+			<img src="../pictures/arduino/achtone.JPG"><br >
+			
+			Opdracht 9 bij deze opdracht hebben we een button aangesloten aan de lichten. Als er op de button wordt gedrukt dan gaat het licht aan en anders gaat hij weer uit. Uiteindelijk zijn er twee buttons eraan toegevoegd waardoor we konden gaan experimenteren met de codes. Zodat de lichten allebei aangaan als beide knoppen worden ingedrukt of als er één button ingedrukt wordt dat er maar één lamp aangaat.<br >
+			<img src="../pictures/arduino/eight_ledtwobuttonviceversa.PNG"><br >
+			<img src="../pictures/arduino/nine_ledbutton.PNG"><br >
+			<img src="../pictures/arduino/nine_ledtwobutton.PNG"><br >
+			<video controls><source src="../pictures/arduino/v/dertien.mp4" type="video/mp4"></video><br >
+			
+			Opdracht 10 de servometer is aangesloten aan de arduino, we hebben de motor laten draaien. De codes zijn ook aangepast zodat hij alle kanten op ging.<br >
+			<img src="../pictures/arduino/ten_servo.PNG"><br >
+			<video controls><source src="../pictures/arduino/v/viertien.mp4" type="video/mp4"></video><br >
+			
+			Opdracht 11 bij deze opdracht hebben we de servometer aangesloten aan de potmeter. Als er gedraaid wordt aan de potmeter dan gaat de servometer ook draaien. Uiteindelijk zijn er ook twee buttons aangesloten aan de servometer om het te laten bewegen.<br >
+			<img src="../pictures/arduino/eleven_servopotentiometer.PNG"><br >
+			<img src="../pictures/arduino/eleven_servotwobuttons.PNG"><br >
+			<video controls><source src="../pictures/arduino/v/vijftien.mp4" type="video/mp4"></video><br >
+			<video controls><source src="../pictures/arduino/v/zestien.mp4" type="video/mp4"></video><br >
+			
+			Opdracht 12 de opdracht waar we met geluid werkte. We hebben een speaker aangesloten aan de arduino en hem geluid laten maken.<br >
+			<img src="../pictures/arduino/twelf_soundcreative.PNG"><br >
+			<img src="../pictures/arduino/twelf_soundsiren.PNG"><br >
+			<video controls><source src="../pictures/arduino/v/zeventien.mp4" type="video/mp4"></video><br >
+			
+			Opdracht 13 als laatste opdracht hebben we de accelerometer en gyrosoop aangesloten aan de speaker. Als de breadboard beweegd dan maakt de speaker andere geluiden.<br >
+			<img src="../pictures/arduino/thirtheen_alignedgyrowithsound.PNG"><br >
+			<video controls><source src="../pictures/arduino/v/achttien.mp4" type="video/mp4"></video><br >
+			<video controls><source src="../pictures/arduino/v/negentien.mp4" type="video/mp4"></video><br >
+			<video controls><source src="../pictures/arduino/v/twintig.mp4" type="video/mp4"></video><br >
+			
+			<br >
+			<br >
+			
+			</p>
 		</div>
 
 		
