--- a/html/workshop_two.html
+++ b/html/workshop_two.html
@@ -25,11 +25,28 @@
 
 		<div style="margin-left:25%;padding:1px 16px;height:1000px;">
 			<h3>Assignments</h3>
-			<p>...</p>
-			<h3>Research</h3>
-			<p>...</p>
-			<h3>Reflect</h3>
-			<p>...</p>
+			<p>
+			Ten eerste heb ik op het landschap bergen gemaakt. De bergen gaan langs alle randen van het gebied.
+			<img src="../pictures/unity/stepone.JPG"><br >
+			
+			Ten tweede heb ik een player toegevoegd aan het landschap. Door het pakket de downloaden kon ik als persoon zelf door de wereld lopen. Door de peilen op het toetsenbord te gebruiken kun je door het landschap lopen.
+			<img src="../pictures/unity/steptwo.JPG"><br >
+			
+			Bij nummer drie heb ik verschillende soorten objecten op het landschap gezet. De verschillende soorten objecten staan niet allemaal op de grond. De gene hangt ook in de lucht waardoor je alleen maar de schaduw ziet van het object.
+			<img src="../pictures/unity/stepthree.JPG"><br >
+			
+			Nu heb ik twee verschillende objecten, de tijgers op het landschap gezet. De twee objecten komen van een store die in het programma staat. De objecten zijn gedownload en ik het landschap gezet.
+			<img src="../pictures/unity/stepfour.JPG"><br >
+
+			Als laatste als je naar de tijgers loopt dan zal het vuur aan gaan. Doordat er een stukje code in het programma gezet is zal het vuur aan blijven en niet na een paar seconde uit gaan.
+			<img src="../pictures/unity/stepfive.JPG"><br >
+			
+			Verder heb ik het onderdeel processing niet kunnen doen omdat ik een windows computer heb. In de opdracht stond dat het niet lukt om de opdracht te doen met een windows computer. Ik heb samen met een klasgenoot het geprobeert en inderdaad lukte het ons niet om de opdracht te maken.
+			
+			<br >
+			<br >
+			
+			</p>
 		</div>
 
 		
