--- a/html/topic_one.html
+++ b/html/topic_one.html
@@ -37,7 +37,7 @@
 				Ze kunnen via de app zien hoe de route gaat en de activiteiten zoals traplopen gaan doen. Ze worden gestimuleerd omdat er een 
 				competitie achter zit. Mensen worden gestimuleerd om dingen te doen als ze iets kunnen winnen. De app geeft ook meldingen waardoor 
 				mensen de activiteiten niet kunnen missen. Ze zijn eventjes lekker aan het bewegen in het gebouw.
-				<img src="../pictures/nummereen.JPG">
+				<img src="../pictures/nummereen.jpg">
 				<br ><br >
 
 				<b>3. Describe/draw how your concept will work technically.</b><br >
