--- a/html/topic_two.html
+++ b/html/topic_two.html
@@ -30,7 +30,7 @@
 			les dan zal hij of zij die missen. Door de les op te nemen kunnen ze via de VR bril te les volgen. Ze kunnen om zich heen 
 			kijken en zien welke vragen andere studenten stellen. De student kan de les of hoorcollege volgen thuis en aantrekkingen maken. 
 			Op deze manier kunnen alle lessen gevolg worden.<br />
-			<img src="../pictures/nummertwee.JPG">
+			<img src="../pictures/nummertwee.jpg">
 			<img src="../pictures/nummerdrie.png">
 			<br ><br >
 			
@@ -45,8 +45,8 @@
 			moeten gaan doorzoeken. De plaatjes kunnen ook gaan bewegen om meer interactie te creëren. Op deze manier vinden kinderen het toch leuk 
 			om naar een museum te gaan en zullen ze wel alles gaan zien.
 			<br />
-			<img src="../pictures/nummervijf.JPG">
-			<img src="../pictures/nummervier.JPG">
+			<img src="../pictures/nummervijf.jpg">
+			<img src="../pictures/nummervier.jpg">
 			<br ><br >
 			
 			<b>Sports/ movement (VR concept)</b><br >
@@ -72,8 +72,8 @@
 			Door deze app is dat in de toekomst wel mogelijk.<br >
 			De link van het project is: <a href="https://vrscout.com/projects/prototype-ar-app-translates-sign-language/" target="_blanc">
 			https://vrscout.com/projects/prototype-ar-app-translates-sign-language/<a>
-			<img src="../pictures/nummeracht.JPG">
-			<img src="../pictures/nummernegen.JPG">
+			<img src="../pictures/nummeracht.jpg">
+			<img src="../pictures/nummernegen.jpg">
 			<br ><br >
 			</p>
 			
